apps/services/web-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
spec:
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      imagePullSecrets:
        - name: github-credentials
      containers:
        - name: web-app
          image: ghcr.io/recomendapp/web:b123-d337ff1
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 120
            periodSeconds: 30
            timeoutSeconds: 15
            failureThreshold: 3
          resources:
            requests:
              cpu: "1"
              memory: "2Gi"
            limits:
              cpu: "2"
              memory: "4Gi"
          volumeMounts:
            - name: cache
              mountPath: /app/.next/cache

        # - name: cache-cleaner
        #   image: alpine
        #   command: ["sh", "-c", "while true; do find /cache -type f -mtime +1 -delete; sleep 3600; done"]
        #   volumeMounts:
        #     - name: cache
        #       mountPath: /cache
        #   resources:
        #     requests:
        #       cpu: "50m"
        #       memory: "64Mi"
        #     limits:
        #       cpu: "100m"
        #       memory: "128Mi"

      volumes:
        - name: cache
          emptyDir:
            sizeLimit: "20Gi"
